<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatingActivity">

    <Button
        android:id="@+id/btn_confirm_new_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/new_activity_create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newActivityImportance"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/newActivityName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:autofillHints="AUTOFILL_TYPE_TEXT"
        android:ems="10"
        android:hint="@string/new_activity_name_hint"
        android:inputType="textPersonName"
        android:text="@string/new_activity_name_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newActivityDate"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/newActivityDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <SeekBar
        android:id="@+id/newActivityImportance"
        android:layout_width="124dp"
        android:layout_height="41dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newActivityName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_importance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/new_activity_importance"
        app:layout_constraintBottom_toBottomOf="@+id/newActivityImportance"
        app:layout_constraintEnd_toStartOf="@+id/newActivityImportance"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newActivityImportance" />
</androidx.constraintlayout.widget.ConstraintLayout>